--- a/style.css
+++ b/style.css
@@ -1,51 +1,73 @@
 body {
-    background-color: cornflowerblue;
-    font-family: sans-serif;
+    height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
+    background-color: cornflowerblue;
 }
 
 #main-play-area {
-    background-image: url('./img/space.png');
     background-color: black;
-    margin-top: 150px;
-    height: 650px;
-    width: 650px;
+    background-image: url(img/space.png);
+    height: 600px;
+    width: 600px;
+}
+
+.game-instructions {
+    position: relative;
+    color: white;
+    left: 7rem;
+    top: -50px;
+}
+
+.start-button {
+    position: relative;
+    color: white;
+    text-align: center;
+    cursor: pointer;
 }
 
 .player-shooter {
     position: relative;
     height: 60px;
     width: 70px;
-    left: 30px;
-    top: 250px;
+    left: 20px;
+    top: 250px
 }
 
 .laser {
     position: relative;
-    height: 30px;
     width: 40px;
+    height: 30px;
 }
 
 .alien {
-    position: relative;
     height: 60px;
     width: 70px;
+    position: relative;
 }
 
 .alien-transition {
-    transition: opacity 1.5s ease-in-out;
     opacity: 1;
+    transition: opacity 1.5s ease-in-out;
 }
 
 .dead-alien {
-    position: relative;
     height: 60px;
     width: 70px;
+    position: relative;
     opacity: 0;
 }
+
+.points {
+    text-align: right;
+    color: white;
+    position: relative;
+    margin: 20px;
+    font-size: xx-large;
+}
+
